Changed icon z-index to have the fixed menu in front of all elements

--- a/Ghibli2024.css
+++ b/Ghibli2024.css
@@ -39,7 +39,7 @@
   width: 55px;
   text-justify: center;
   text-align: center;
-  z-index: 1;
+  z-index: 99;
 }
 .navigation a:hover {
   background-color:#175F60;
